tests/results/ingress.yaml
---
# Source: library/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-library  
  labels:
    app.kubernetes.io/name: release-name-library
    helm.sh/chart: library-0.1.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: release-name-library
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: traefik
  rules:
  - host: release-name.service.core-compute-preview.internal
    http:
      paths:
      - path: /test
        pathType: Prefix
        backend:
          service:
            name: release-name
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: release-name-library
            port:
              number: 80
