tests/results/service.yaml
---
# Source: library/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-library  
  labels:
    app.kubernetes.io/name: release-name-library
    helm.sh/chart: library-0.1.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: release-name-library
    another: another-value
    sample: sample-value
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
  selector:
    app.kubernetes.io/name: release-name-library
