tests/results/template-deployment-tests.yaml
---
# Source: library/templates/deployment-tests.yaml
apiVersion: batch/v1beta1
kind: CronJob
metadata:
  name: RELEASE-NAME-smoketestscron-job
  labels:
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: RELEASE-NAME-smoketestscron
    helm.sh/chart: library-0.1.0
    app.kubernetes.io/name: release-name-library-smoketestscron
spec:
  schedule: "20 0/1 * * *"
  jobTemplate:
    spec:
      backoffLimit: 2
      template:
        metadata:
          labels:
            app.kubernetes.io/name: release-name-library-smoketestscron
        spec:
          
          securityContext:
            runAsUser: 1000
            fsGroup: 1000
          restartPolicy: Never
          serviceAccountName: tests-service-account
          containers:
            - name: tests
              image: hmctspublic.azurecr.io/spring-boot/template
              securityContext:
                allowPrivilegeEscalation: false
              resources:
                requests:
                  memory: "256Mi"
                  cpu: "100m"
                limits:
                  memory: "2048Mi"
                  cpu: "1000m"
---
# Source: library/templates/deployment-tests.yaml
apiVersion: batch/v1beta1
kind: CronJob
metadata:
  name: RELEASE-NAME-functionaltestscron-job
  labels:
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: RELEASE-NAME-functionaltestscron
    helm.sh/chart: library-0.1.0
    app.kubernetes.io/name: release-name-library-functionaltestscron
spec:
  schedule: "30 0/6 * * *"
  jobTemplate:
    spec:
      backoffLimit: 2
      template:
        metadata:
          labels:
            app.kubernetes.io/name: release-name-library-functionaltestscron
        spec:
          
          securityContext:
            runAsUser: 1000
            fsGroup: 1000
          restartPolicy: Never
          serviceAccountName: tests-service-account
          containers:
            - name: tests
              image: hmctspublic.azurecr.io/spring-boot/template
              securityContext:
                allowPrivilegeEscalation: false
              resources:
                requests:
                  memory: "256Mi"
                  cpu: "100m"
                limits:
                  memory: "2048Mi"
                  cpu: "1000m"
---
# Source: library/templates/deployment-tests.yaml
apiVersion: v1
kind: Pod
metadata:
  name: RELEASE-NAME-smoketests-job
  labels:
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: RELEASE-NAME-smoketests
    helm.sh/chart: library-0.1.0
    app.kubernetes.io/name: release-name-library-smoketests
  annotations:
    "helm.sh/hook": post-install,post-upgrade
    "helm.sh/hook-delete-policy": before-hook-creation
spec:
  
  securityContext:
    runAsUser: 1000
    fsGroup: 1000
  restartPolicy: Never
  serviceAccountName: tests-service-account
  containers:
    - name: tests
      image: hmctspublic.azurecr.io/spring-boot/template
      securityContext:
        allowPrivilegeEscalation: false
      resources:
        requests:
          memory: "256Mi"
          cpu: "100m"
        limits:
          memory: "2048Mi"
          cpu: "1000m"
---
# Source: library/templates/deployment-tests.yaml
apiVersion: v1
kind: Pod
metadata:
  name: RELEASE-NAME-functionaltests-job
  labels:
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: RELEASE-NAME-functionaltests
    helm.sh/chart: library-0.1.0
    app.kubernetes.io/name: release-name-library-functionaltests
  annotations:
    "helm.sh/hook": post-install,post-upgrade
    "helm.sh/hook-delete-policy": before-hook-creation
spec:
  
  securityContext:
    runAsUser: 1000
    fsGroup: 1000
  restartPolicy: Never
  serviceAccountName: tests-service-account
  containers:
    - name: tests
      image: hmctspublic.azurecr.io/spring-boot/template
      securityContext:
        allowPrivilegeEscalation: false
      resources:
        requests:
          memory: "256Mi"
          cpu: "100m"
        limits:
          memory: "2048Mi"
          cpu: "1000m"
