tests/results/template-deployment.yaml
---
# Source: library/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-library
  labels:
    app.kubernetes.io/name: release-name-library
    helm.sh/chart: library-0.1.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: release-name-library
  annotations:
spec:
  revisionHistoryLimit: 0
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: release-name-library
  template:
    metadata:
      labels:
        app.kubernetes.io/name: release-name-library
        helm.sh/chart: library-0.1.0
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/instance: release-name-library
      annotations:
    spec:
      serviceAccountName: release-name-library
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app.kubernetes.io/name
                    operator: In
                    values:
                      - release-name-library
              topologyKey: "kubernetes.io/hostname"
      securityContext:
        runAsUser: 1000
        fsGroup: 1000
      volumes:
        - name: vault-bulk-scan
          csi:
            driver: "secrets-store.csi.k8s.io"
            readOnly: true
            volumeAttributes:
              providerName: "azure"
              usePodIdentity: "true"
              keyvaultName: "bulk-scan-aat"
              objects: |
                array:
                  - |
                    objectName: idam-client-secret
                    objectType: secret
                  - |
                    objectName: s2s-secret
                    objectType: secret
              tenantid: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
              resourceGroup: "bulk-scan-aat"
              subscriptionId: "1c4f0704-a29e-403d-b719-b90c34ef14c9"
        - name: vault-s2s
          csi:
            driver: "secrets-store.csi.k8s.io"
            readOnly: true
            volumeAttributes:
              providerName: "azure"
              usePodIdentity: "true"
              keyvaultName: "s2s-aat"
              objects: |
                array:
                  - |
                    objectName: microservicekey-ccd-admin
                    objectType: secret
                  - |
                    objectName: microservicekey-ccd-data
                    objectType: secret
              tenantid: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
              resourceGroup: "rpe-service-auth-provider-aat"
              subscriptionId: "1c4f0704-a29e-403d-b719-b90c34ef14c9"
      dnsConfig:
        options:
          - name: ndots
            value: "3"
      containers:
        - image: hmctspublic.azurecr.io/chart-nodejs/testapp
          name: release-name-library
          securityContext:
            allowPrivilegeEscalation: false
          env:
            - name: STORAGE_ACCOUNT_NAME
              valueFrom:
                secretKeyRef:
                  name: storage-secret-example-RELEASE-NAME
                  key: storageAccountName
            - name: REFORM_ENVIRONMENT
              value: "preview"
            - name: REFORM_SERVICE_NAME
              value: "rhubarb-frontend"
            - name: REFORM_TEAM
              value: "cnp"
          envFrom:
            - configMapRef:
                name: release-name-library
          volumeMounts:
            - name: vault-bulk-scan
              mountPath: "/mnt/secrets/bulk-scan"
              readOnly: true
            - name: vault-s2s
              mountPath: "/mnt/secrets/s2s"
              readOnly: true
          resources:
            requests:
              memory: "64Mi"
              cpu: "25m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
              name: http
          livenessProbe:
            httpGet:
              path: /health/liveness
              port: 3000
            initialDelaySeconds: 5
            timeoutSeconds: 3
            periodSeconds: 15
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            timeoutSeconds: 3
            periodSeconds: 15
          imagePullPolicy: Always
